force-app/main/default/objects/Favorite_Models__c/Favorite_Models__c.object-meta.xml
<CustomObject>
    <label>Favorite Models</label>
    <nameField>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>