force-app/main/default/objects/Favorite_Models__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>KTM</fullName>
            </value>
            <value>
                <fullName>Zontes</fullName>
            </value>
            <value>
                <fullName>Ducatti</fullName>
            </value>
            <value>
                <fullName>Voge</fullName>
            </value>
            <value>
                <fullName>Benelli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>