force-app/main/default/objects/Favorite_Models__c/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <label>Displacement</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>