force-app/main/default/objects/Favorite_Models__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>