force-app/main/default/objects/Favorite_Models__c/fields/Months_Picker__c.field-meta.xml
<CustomField>
    <fullName>Months_Picker__c</fullName>
    <label>Months Picker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>